# MoGAAAP

./: .gitignore  CHANGELOG.md  README.md  mogaaap.sh  pyproject.toml
.github/workflows/: push_containers.yml
MoGAAAP/: MoGAAAP.py  utils.py
MoGAAAP/config/: example.tsv  example.yaml
MoGAAAP/workflow/: Snakefile
config/: .gitignore  config.yaml  example.assemblies.tsv  example.assemblies.yaml  example.tsv  example.yaml  samples.tsv
config/examples/: arabidopsis.tsv  arabidopsis.yaml  grape.tsv  grape.yaml  human.tsv  human.yaml
test_data/: .gitignore  README.md  config.yaml  download_databases.sh  download_test_data.sh  test_samples.tsv
workflow/: Snakefile
workflow/envs/: agat.yaml  assembly-stats.yaml  bedtools.yaml  bioawk.yaml  blast.yaml  busco.yaml  circos.yaml  csvtotable.yaml  flye.yaml  gffcompare.yaml  gnuplot.yaml  hifiasm.yaml  kmer-db.yaml  kraken2.post-deploy.sh  liftoff.yaml  mapping.yaml  mashmap.yaml  merqury.yaml  minimap2.yaml  mummer.yaml  ntjoin.yaml  pandoc.yaml  pantools.yaml  rbase.yaml  seqtk.yaml  verkko.yaml  yahs.yaml
workflow/report/: blast.rst  busco.rst  circos_plot.rst  haphic.rst  kraken.rst  mash.rst  merqury_plot.rst  merqury_qv.rst  mummerplot.rst  ntsynt.rst  omark.rst  pangrowth_core.rst  pangrowth_hist.rst  pantools_core_dispensable.rst  pantools_core_dispensable_total.rst  sans.rst  statistics.rst  workflow.rst
workflow/rules/: 02.blast_p.smk  06.bcovblp.smk  agat.smk  common.smk
workflow/schemas/: assemblies.schema.yaml  config.schema.yaml  samples.schema.yaml
workflow/scripts/: create_circos_config.py  (+6 more)
(+205 files in other folders)
